# __mping-examples

./: CMakeLists.txt  README.md
evaluation/: make_bfs_csv.py  make_bfs_plot.py  make_sorting_plot.py
executables/: bfs.cpp  sorting.cpp  type_ping_pong.cpp  vector_allgather.cpp
experiments/: bfs.suite.yaml  expcore.py  run-experiments.py  runners.py  slugify.py  sorting.suite.yaml
include/bfs/: bfs_algorithm.hpp  common.hpp  utils.hpp
include/bfs/bindings/: __mping.hpp  __mping_flattened.hpp  __mping_grid.hpp  __mping_sparse.hpp  mpi.hpp  mpi_neighborhood.hpp  mpi_neighborhood_dynamic.hpp
include/sorting/bindings/: __mping.hpp  __mping_flattened.hpp  mpi.hpp
include/vector_allgather/: __mping.hpp  mpi.hpp
